// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorPicker 스냅샷 > 기본 렌더링 구조가 유지됨 1`] = `
<div
  class="color-picker"
>
  <button
    class="color-swatch "
    style="background-color: #1890ff;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #52c41a;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #faad14;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #f5222d;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #722ed1;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #13c2c2;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #eb2f96;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #fa8c16;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #a0d911;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #2f54eb;"
    type="button"
  />
  <style>
    
                .color-picker {
                    display: flex;
                    flex-wrap: wrap;
                    gap: 8px;
                }
                .color-swatch {
                    width: 28px;
                    height: 28px;
                    border-radius: 4px;
                    border: 2px solid transparent;
                    cursor: pointer;
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    transition: transform 0.2s, border-color 0.2s;
                }
                .color-swatch:hover {
                    transform: scale(1.1);
                }
                .color-swatch-selected {
                    border-color: #333;
                }
            
  </style>
</div>
`;

exports[`ColorPicker 스냅샷 > 다른 색상 선택 시 구조가 유지됨 1`] = `
<div
  class="color-picker"
>
  <button
    class="color-swatch "
    style="background-color: #1890ff;"
    type="button"
  />
  <button
    class="color-swatch color-swatch-selected"
    style="background-color: #52c41a;"
    type="button"
  >
    <span
      aria-label="check"
      class="anticon anticon-check"
      role="img"
      style="color: #fff;"
    >
      <svg
        aria-hidden="true"
        data-icon="check"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
        />
      </svg>
    </span>
  </button>
  <button
    class="color-swatch "
    style="background-color: #faad14;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #f5222d;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #722ed1;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #13c2c2;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #eb2f96;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #fa8c16;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #a0d911;"
    type="button"
  />
  <button
    class="color-swatch "
    style="background-color: #2f54eb;"
    type="button"
  />
  <style>
    
                .color-picker {
                    display: flex;
                    flex-wrap: wrap;
                    gap: 8px;
                }
                .color-swatch {
                    width: 28px;
                    height: 28px;
                    border-radius: 4px;
                    border: 2px solid transparent;
                    cursor: pointer;
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    transition: transform 0.2s, border-color 0.2s;
                }
                .color-swatch:hover {
                    transform: scale(1.1);
                }
                .color-swatch-selected {
                    border-color: #333;
                }
            
  </style>
</div>
`;
